--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -909,6 +909,7 @@
     <Compile Include="frmVariables.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="clsGridLink.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
