--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -135,6 +135,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsDistribution.vb" />
     <Compile Include="clsRFunction.vb" />
     <Compile Include="dlgAddStartRain.designer.vb">
       <DependentUpon>dlgAddStartRain.vb</DependentUpon>
@@ -958,6 +959,12 @@
       <DependentUpon>ucrDataSelection.vb</DependentUpon>
     </Compile>
     <Compile Include="ucrDataSelection.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ucrDistributions.Designer.vb">
+      <DependentUpon>ucrDistributions.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ucrDistributions.vb">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="ucrNewColumnName.Designer.vb">
@@ -2154,6 +2161,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ucrDataSelection.sw-KE.resx">
       <DependentUpon>ucrDataSelection.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrDistributions.fr-FR.resx">
+      <DependentUpon>ucrDistributions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrDistributions.resx">
+      <DependentUpon>ucrDistributions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrDistributions.sw-KE.resx">
+      <DependentUpon>ucrDistributions.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ucrNewColumnName.fr-FR.resx">
       <DependentUpon>ucrNewColumnName.vb</DependentUpon>
