Added the subset and data merge dialog. Their entrie in the form main and also moved log, script, variable and metadata to windows menu.

--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -503,6 +503,12 @@
     <Compile Include="dlgMakeFactor.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgMerge.Designer.vb">
+      <DependentUpon>dlgMerge.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgMerge.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgMissingData.designer.vb">
       <DependentUpon>dlgMissingData.vb</DependentUpon>
     </Compile>
@@ -777,6 +783,12 @@
       <DependentUpon>dlgStemAndLeaf.vb</DependentUpon>
     </Compile>
     <Compile Include="dlgStemAndLeaf.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dlgSubset.Designer.vb">
+      <DependentUpon>dlgSubset.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgSubset.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlgSummary.Designer.vb">
