--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -215,6 +215,12 @@
     <Compile Include="dlgCliPlot.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgColumnRows.Designer.vb">
+      <DependentUpon>dlgColumnRows.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgColumnRows.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgColumnStats.Designer.vb">
       <DependentUpon>dlgColumnStats.vb</DependentUpon>
     </Compile>
@@ -1163,6 +1169,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgCliPlot.sw-KE.resx">
       <DependentUpon>dlgCliPlot.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgColumnRows.fr-FR.resx">
+      <DependentUpon>dlgColumnRows.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgColumnRows.resx">
+      <DependentUpon>dlgColumnRows.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgColumnRows.sw-KE.resx">
+      <DependentUpon>dlgColumnRows.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgCorrelation.fr-FR.resx">
       <DependentUpon>dlgCorrelation.vb</DependentUpon>
