--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -1057,6 +1057,12 @@
     <Compile Include="ucrSelectorByDataFrameAddRemove.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="ucrVariablename.designer.vb">
+      <DependentUpon>ucrVariablename.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ucrVariablename.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="dlgAddStartRain.fr-FR.resx">
@@ -2333,6 +2339,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ucrSelectorByDataFrameAddRemove.sw-KE.resx">
       <DependentUpon>ucrSelectorByDataFrameAddRemove.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrVariablename.fr-FR.resx">
+      <DependentUpon>ucrVariablename.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrVariablename.resx">
+      <DependentUpon>ucrVariablename.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrVariablename.sw-KE.resx">
+      <DependentUpon>ucrVariablename.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
