--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -293,12 +293,6 @@
     <Compile Include="dlgDescriptiveStatistics.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="dlgDisplay.Designer.vb">
-      <DependentUpon>dlgDisplay.vb</DependentUpon>
-    </Compile>
-    <Compile Include="dlgDisplay.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="dlgDisplayDaily.Designer.vb">
       <DependentUpon>dlgDisplayDaily.vb</DependentUpon>
     </Compile>
@@ -875,6 +869,12 @@
     <Compile Include="dlgUnstackDailyData.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgView.Designer.vb">
+      <DependentUpon>dlgView.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgView.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgWaterBalance.Designer.vb">
       <DependentUpon>dlgWaterBalance.vb</DependentUpon>
     </Compile>
@@ -1292,15 +1292,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgDescriptiveStatistics.sw-KE.resx">
       <DependentUpon>dlgDescriptiveStatistics.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="dlgDisplay.fr-FR.resx">
-      <DependentUpon>dlgDisplay.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="dlgDisplay.resx">
-      <DependentUpon>dlgDisplay.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="dlgDisplay.sw-KE.resx">
-      <DependentUpon>dlgDisplay.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgDisplayDaily.fr-FR.resx">
       <DependentUpon>dlgDisplayDaily.vb</DependentUpon>
@@ -2105,6 +2096,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgUnstackDailyData.sw-KE.resx">
       <DependentUpon>dlgUnstackDailyData.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgView.fr-FR.resx">
+      <DependentUpon>dlgView.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgView.resx">
+      <DependentUpon>dlgView.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgView.sw-KE.resx">
+      <DependentUpon>dlgView.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgWaterBalance.fr-FR.resx">
       <DependentUpon>dlgWaterBalance.vb</DependentUpon>
