--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -491,6 +491,12 @@
     <Compile Include="dlgIsNAListvb.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgLabels.Designer.vb">
+      <DependentUpon>dlgLabels.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgLabels.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgLines.designer.vb">
       <DependentUpon>dlgLines.vb</DependentUpon>
     </Compile>
@@ -1583,6 +1589,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgIsNAListvb.sw-KE.resx">
       <DependentUpon>dlgIsNAListvb.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgLabels.fr-FR.resx">
+      <DependentUpon>dlgLabels.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgLabels.resx">
+      <DependentUpon>dlgLabels.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgLabels.sw-KE.resx">
+      <DependentUpon>dlgLabels.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgLines.fr-FR.resx">
       <DependentUpon>dlgLines.vb</DependentUpon>
