--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -233,6 +233,12 @@
     <Compile Include="dlgColumnStats.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgControlOptions.Designer.vb">
+      <DependentUpon>dlgControlOptions.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgControlOptions.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgCorrelation.designer.vb">
       <DependentUpon>dlgCorrelation.vb</DependentUpon>
     </Compile>
@@ -1199,6 +1205,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgColumnRows.sw-KE.resx">
       <DependentUpon>dlgColumnRows.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgControlOptions.fr-FR.resx">
+      <DependentUpon>dlgControlOptions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgControlOptions.resx">
+      <DependentUpon>dlgControlOptions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgControlOptions.sw-KE.resx">
+      <DependentUpon>dlgControlOptions.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgCorrelation.fr-FR.resx">
       <DependentUpon>dlgCorrelation.vb</DependentUpon>
