--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -233,10 +233,10 @@
     <Compile Include="dlgColumnStats.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="dlgControlOptions.Designer.vb">
-      <DependentUpon>dlgControlOptions.vb</DependentUpon>
+    <Compile Include="sdgRestrict.Designer.vb">
+      <DependentUpon>sdgRestrict.vb</DependentUpon>
     </Compile>
-    <Compile Include="dlgControlOptions.vb">
+    <Compile Include="sdgRestrict.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlgCorrelation.designer.vb">
@@ -1230,14 +1230,14 @@
     <EmbeddedResource Include="dlgColumnRows.sw-KE.resx">
       <DependentUpon>dlgColumnRows.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgControlOptions.fr-FR.resx">
-      <DependentUpon>dlgControlOptions.vb</DependentUpon>
+    <EmbeddedResource Include="sdgRestrict.fr-FR.resx">
+      <DependentUpon>sdgRestrict.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgControlOptions.resx">
-      <DependentUpon>dlgControlOptions.vb</DependentUpon>
+    <EmbeddedResource Include="sdgRestrict.resx">
+      <DependentUpon>sdgRestrict.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgControlOptions.sw-KE.resx">
-      <DependentUpon>dlgControlOptions.vb</DependentUpon>
+    <EmbeddedResource Include="sdgRestrict.sw-KE.resx">
+      <DependentUpon>sdgRestrict.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgCorrelation.fr-FR.resx">
       <DependentUpon>dlgCorrelation.vb</DependentUpon>
